gccida/g0/prune_preferences
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1372:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+10h] [rbp-40h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1372:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1372:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+10h] [rbp-40h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1390:8: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
temp = allocno_0[( __int64)num].hard_reg_conflicts; 
       ^~~~~~~~~
       allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1391:6: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( allocno_0[( __int64)num].calls_crossed ) 
     ^~~~~~~~~
     allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1395:50: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
tempb = ~reg_class_contents[reg_preferred_class( allocno_0[( __int64)num].reg)] | tempa; 
                                                 ^~~~~~~~~
                                                 allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1396:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno_'?
allocno_0[( __int64)num].hard_reg_preferences &= ~tempb; 
^~~~~~~~~
allocno_
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1374:5: note: 'allocno_' declared here
int allocno_; // [rsp+24h] [rbp-2Ch] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1396:10: error: subscripted value is not an array, pointer, or vector
allocno_0[( __int64)num].hard_reg_preferences &= ~tempb; 
~~~~~~~~~^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1397:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno_'?
allocno_0[( __int64)num].hard_reg_copy_preferences &= ~tempb; 
^~~~~~~~~
allocno_
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1374:5: note: 'allocno_' declared here
int allocno_; // [rsp+24h] [rbp-2Ch] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1397:10: error: subscripted value is not an array, pointer, or vector
allocno_0[( __int64)num].hard_reg_copy_preferences &= ~tempb; 
~~~~~~~~~^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1398:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno_'?
allocno_0[( __int64)num].hard_reg_full_preferences &= ~tempb; 
^~~~~~~~~
allocno_
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1374:5: note: 'allocno_' declared here
int allocno_; // [rsp+24h] [rbp-2Ch] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1398:10: error: subscripted value is not an array, pointer, or vector
allocno_0[( __int64)num].hard_reg_full_preferences &= ~tempb; 
~~~~~~~~~^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1411:12: error: invalid suffix 'x' on integer constant
*(short *)0x = *v0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1413:20: error: invalid suffix 'x' on integer constant
while ( *(short *)0x ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1415:19: error: invalid suffix 'x' on integer constant
if ( ( *(short *)0x & 1) != 0 && ia < allocno_to_order[allocno2] ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1417:6: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( allocno_0[( __int64)allocno2].size > allocno_0[( __int64)numa].size ) 
     ^~~~~~~~~
     allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1417:43: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( allocno_0[( __int64)allocno2].size > allocno_0[( __int64)numa].size ) 
                                          ^~~~~~~~~
                                          allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1418:10: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
temp2 |= allocno_0[( __int64)allocno2].hard_reg_full_preferences; 
         ^~~~~~~~~
         allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1420:11: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
temp_0 |= allocno_0[( __int64)allocno2].hard_reg_full_preferences; 
          ^~~~~~~~~
          allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/global.c:1422:12: error: invalid suffix 'x' on integer constant
*(short *)0x >>= 1; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/prune_preferences/src/obj/global.o] Error 1
